include/slvs.h

typedef unsigned __int32 uint32_t;
typedef uint32_t Slvs_hConstraint;
typedef uint32_t Slvs_hGroup;
typedef struct {
    int                 result;
    int                 dof;
    int                 nbad;
} Slvs_SolveResult;
/*
 * Multi-instance solver handles.
 *
 * Historically all sketch + system state (`Sketch SK`, `System SYS`, the
 * dragged-param set, the temporary mimalloc arena) lived in process-globals.
 * That's incompatible with running multiple independent solvers in one
 * process — the canonical pyactiongraphsim need is N `SolveSpaceEngine`
 * instances driving N independent simulation scenes, potentially on N
 * threads.
 *
 * `Slvs_Solver` is an opaque handle to a complete, independent solver
 * instance: its own sketch, its own system, its own dragged set, its own
 * scratch arena. Every `Slvs_*` data-mutating function takes a
 * `Slvs_Solver *` as its first argument — the API is fully explicit.
 *
 * Multi-thread: each solver is independent; running N solvers on N threads
 * has zero cross-talk. Single thread juggling two solvers: pass whichever
 * handle you mean on each call; the solver does not carry hidden state
 * between calls.
 *
 *   Slvs_Solver *a = Slvs_CreateSolver();
 *   Slvs_Solver *b = Slvs_CreateSolver();
 *   Slvs_Entity p_in_a = Slvs_AddPoint3D(a, 1, 0, 0, 0);
 *   Slvs_Entity p_in_b = Slvs_AddPoint3D(b, 1, 0, 0, 0);
 *   Slvs_SolveSketch(a, 1, NULL);
 *   Slvs_SolveSketch(b, 1, NULL);
 *   Slvs_DestroySolver(a);
 *   Slvs_DestroySolver(b);
 *
 * The four lifecycle functions below manage `Slvs_Solver *` handles.
 * `Slvs_SetCurrentSolver` / `Slvs_GetCurrentSolver` exist for testing and
 * for embedding scenarios where the caller wants to inspect/clear the
 * internal thread-local current pointer; normal callers do not need them.
 */
typedef struct Slvs_Solver Slvs_Solver;
DLL double Slvs_GetParamValue(Slvs_Solver *solver, uint32_t ph);
DLL void Slvs_SetParamValue(Slvs_Solver *solver, uint32_t ph, double value);
DLL double Slvs_GetConstraintValue(Slvs_Solver *solver, uint32_t ch);
DLL void Slvs_SetConstraintValue(Slvs_Solver *solver, uint32_t ch, double value);
DLL uint32_t Slvs_GetConstraintGroup(Slvs_Solver *solver, uint32_t ch);
DLL void Slvs_SetConstraintGroup(Slvs_Solver *solver, uint32_t ch, uint32_t new_group);
/**
 * Setting `bad` to a non NULL pointer enables finding of bad constraints.
 * If such constraints are found, `bad` is set to a heap allocated array containing
 * the handles of those constraints, while the `nbad` member of the returned
 * `Slvs_SolveResult` struct is set to the number of the bad constraints.
 * NOTE: the user is responsible for freeing the heap allocated memory using `free()`.
 */
DLL Slvs_SolveResult Slvs_SolveSketch(Slvs_Solver *solver, uint32_t hg, Slvs_hConstraint **bad);
DLL void Slvs_ClearSketch(Slvs_Solver *solver);