src/slvs/lib.pyx


    def solve_sketch(self, grouph: int, calculateFaileds: bool):
        # Release the GIL during the solve so other Python threads (notably the
        # asyncio event loop in a parallel coroutine) can run. The underlying
        # `Slvs_SolveSketch` is declared `nogil` in `slvs.h` and touches no
        # Python objects; without `with nogil:` here, the GIL would be held for
        # the duration of the solve and starve every other coroutine — exactly
        # the bug that left the viz server stuck at ~7 broadcasts/sec when the
        # delta robot's solve took ~45 ms per tick.
        cdef Slvs_hConstraint *badp = NULL
        cdef Slvs_hGroup hg = grouph
        cdef Slvs_SolveResult result
        cdef Slvs_Solver *h = self.handle
        if not calculateFaileds:
            with nogil:
                result = Slvs_SolveSketch(h, hg, NULL)
            return result
        else:
            with nogil:
                result = Slvs_SolveSketch(h, hg, &badp)
            bad = []
            if badp != NULL:
                for i in range(0, result.nbad):
                    bad.append(badp[i])
                free(badp)
            return result, bad

    def get_param_value(self, ph: int):
        return Slvs_GetParamValue(self.handle, ph)

    def set_param_value(self, ph: int, value: float):
        Slvs_SetParamValue(self.handle, ph, value)

    def get_constraint_value(self, ch: int):
        return Slvs_GetConstraintValue(self.handle, ch)

    def set_constraint_value(self, ch: int, value: float):
        Slvs_SetConstraintValue(self.handle, ch, value)

    def get_constraint_group(self, ch: int) -> int:
        return Slvs_GetConstraintGroup(self.handle, ch)

    def set_constraint_group(self, ch: int, new_group: int):
        """Move a constraint to a different group.

        Used to enable/disable constraints at runtime: parking a constraint
        in an unused group excludes it from the solve; moving it back to
        an active group re-enables it. The solver filters constraints by
        exact group match in three iteration sites; this single setter
        flips participation for all of them.
        """
        Slvs_SetConstraintGroup(self.handle, ch, new_group)

    def clear_sketch(self):
        Slvs_ClearSketch(self.handle)
